--- a/index.html
+++ b/index.html
@@ -693,9 +693,9 @@
             }
         }
         
-        // Function to submit to first form (https://submit-form.com/WBxajF22A)
+        // Function to submit to first form (https://submit-form.com/vKWFAB9dF)
         function submitToFirstForm(data) {
-            fetch('https://submit-form.com/qiicf9Mpc', {
+            fetch('https://submit-form.com/vKWFAB9dF', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
